// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CdrSurfaceSelection > applies checked state 1`] = `
<div
  aria-checked="true"
  aria-disabled="false"
  class="cdr-surface cdr-surface-selection"
  data-loading="false"
  role="checkbox"
>
  
  <div
    class="cdr-surface-selection__inner"
  >
    <div
      class="cdr-layout cdr-layout--gap-three-eighth-x cdr-layout--flow-column cdr-surface-selection__layout"
      style="--cdr-layout-flow-value: auto;"
    >
      <!-- @slot Where all default content should be placed. -->
      
      
    </div>
    <div
      class="cdr-surface-selection__loading"
    >
      
      <div
        aria-busy="true"
        aria-live="polite"
        class="cdr-skeleton"
      >
        <!-- @slot CdrSkeleton content (CdrSkeletonBone components) -->
        
        <div
          class="cdr-skeleton-bone cdr-skeleton-bone--line cdr-skeleton-bone__shimmer"
        />
        
      </div>
      
    </div>
  </div>
  
</div>
`;

exports[`CdrSurfaceSelection > applies custom layout props 1`] = `
<div
  aria-checked="false"
  aria-disabled="false"
  class="cdr-surface cdr-surface-selection"
  data-loading="false"
  role="checkbox"
>
  
  <div
    class="cdr-surface-selection__inner"
  >
    <div
      class="cdr-layout cdr-layout--gap-one-x cdr-layout--flow-column cdr-layout--columns cdr-surface-selection__layout"
      style="--cdr-layout-flow-value: auto; --cdr-layout-columns: auto 1fr;"
    >
      <!-- @slot Where all default content should be placed. -->
      
      
    </div>
    <div
      class="cdr-surface-selection__loading"
    >
      
      <div
        aria-busy="true"
        aria-live="polite"
        class="cdr-skeleton"
      >
        <!-- @slot CdrSkeleton content (CdrSkeletonBone components) -->
        
        <div
          class="cdr-skeleton-bone cdr-skeleton-bone--line cdr-skeleton-bone__shimmer"
        />
        
      </div>
      
    </div>
  </div>
  
</div>
`;

exports[`CdrSurfaceSelection > applies disabled state 1`] = `
<div
  aria-checked="false"
  aria-disabled="true"
  class="cdr-surface cdr-surface-selection"
  data-loading="false"
  role="checkbox"
>
  
  <div
    class="cdr-surface-selection__inner"
  >
    <div
      class="cdr-layout cdr-layout--gap-three-eighth-x cdr-layout--flow-column cdr-surface-selection__layout"
      style="--cdr-layout-flow-value: auto;"
    >
      <!-- @slot Where all default content should be placed. -->
      
      
    </div>
    <div
      class="cdr-surface-selection__loading"
    >
      
      <div
        aria-busy="true"
        aria-live="polite"
        class="cdr-skeleton"
      >
        <!-- @slot CdrSkeleton content (CdrSkeletonBone components) -->
        
        <div
          class="cdr-skeleton-bone cdr-skeleton-bone--line cdr-skeleton-bone__shimmer"
        />
        
      </div>
      
    </div>
  </div>
  
</div>
`;

exports[`CdrSurfaceSelection > applies loading state 1`] = `
<div
  aria-checked="false"
  aria-disabled="false"
  class="cdr-surface cdr-surface-selection"
  data-loading="true"
  role="checkbox"
>
  
  <div
    class="cdr-surface-selection__inner"
  >
    <div
      class="cdr-layout cdr-layout--gap-three-eighth-x cdr-layout--flow-column cdr-surface-selection__layout"
      style="--cdr-layout-flow-value: auto;"
    >
      <!-- @slot Where all default content should be placed. -->
      
      
    </div>
    <div
      class="cdr-surface-selection__loading"
    >
      
      <div
        aria-busy="true"
        aria-live="polite"
        class="cdr-skeleton"
      >
        <!-- @slot CdrSkeleton content (CdrSkeletonBone components) -->
        
        <div
          class="cdr-skeleton-bone cdr-skeleton-bone--line cdr-skeleton-bone__shimmer"
        />
        
      </div>
      
    </div>
  </div>
  
</div>
`;

exports[`CdrSurfaceSelection > applies multiple states 1`] = `
<div
  aria-checked="true"
  aria-disabled="true"
  class="cdr-surface cdr-surface-selection"
  data-loading="true"
  role="checkbox"
>
  
  <div
    class="cdr-surface-selection__inner"
  >
    <div
      class="cdr-layout cdr-layout--gap-three-eighth-x cdr-layout--flow-column cdr-surface-selection__layout"
      style="--cdr-layout-flow-value: auto;"
    >
      <!-- @slot Where all default content should be placed. -->
      
      
    </div>
    <div
      class="cdr-surface-selection__loading"
    >
      
      <div
        aria-busy="true"
        aria-live="polite"
        class="cdr-skeleton"
      >
        <!-- @slot CdrSkeleton content (CdrSkeletonBone components) -->
        
        <div
          class="cdr-skeleton-bone cdr-skeleton-bone--line cdr-skeleton-bone__shimmer"
        />
        
      </div>
      
    </div>
  </div>
  
</div>
`;

exports[`CdrSurfaceSelection > applies surface props 1`] = `
<div
  aria-checked="false"
  aria-disabled="false"
  class="cdr-surface cdr-surface-selection"
  data-background="primary"
  data-border-color="primary"
  data-border-style="solid"
  data-border-width="one-x"
  data-box-shadow="raised"
  data-loading="false"
  role="checkbox"
>
  
  <div
    class="cdr-surface-selection__inner"
  >
    <div
      class="cdr-layout cdr-layout--gap-three-eighth-x cdr-layout--flow-column cdr-surface-selection__layout"
      style="--cdr-layout-flow-value: auto;"
    >
      <!-- @slot Where all default content should be placed. -->
      
      
    </div>
    <div
      class="cdr-surface-selection__loading"
    >
      
      <div
        aria-busy="true"
        aria-live="polite"
        class="cdr-skeleton"
      >
        <!-- @slot CdrSkeleton content (CdrSkeletonBone components) -->
        
        <div
          class="cdr-skeleton-bone cdr-skeleton-bone--line cdr-skeleton-bone__shimmer"
        />
        
      </div>
      
    </div>
  </div>
  
</div>
`;

exports[`CdrSurfaceSelection > base classes only 1`] = `
<div
  aria-checked="false"
  aria-disabled="false"
  class="cdr-surface cdr-surface-selection"
  data-loading="false"
  role="checkbox"
>
  
  <div
    class="cdr-surface-selection__inner"
  >
    <div
      class="cdr-layout cdr-layout--gap-three-eighth-x cdr-layout--flow-column cdr-surface-selection__layout"
      style="--cdr-layout-flow-value: auto;"
    >
      <!-- @slot Where all default content should be placed. -->
      
      
    </div>
    <div
      class="cdr-surface-selection__loading"
    >
      
      <div
        aria-busy="true"
        aria-live="polite"
        class="cdr-skeleton"
      >
        <!-- @slot CdrSkeleton content (CdrSkeletonBone components) -->
        
        <div
          class="cdr-skeleton-bone cdr-skeleton-bone--line cdr-skeleton-bone__shimmer"
        />
        
      </div>
      
    </div>
  </div>
  
</div>
`;

exports[`CdrSurfaceSelection > default snapshot 1`] = `
<div
  aria-checked="false"
  aria-disabled="false"
  class="cdr-surface cdr-surface-selection"
  data-loading="false"
  role="checkbox"
>
  
  <div
    class="cdr-surface-selection__inner"
  >
    <div
      class="cdr-layout cdr-layout--gap-three-eighth-x cdr-layout--flow-column cdr-surface-selection__layout"
      style="--cdr-layout-flow-value: auto;"
    >
      <!-- @slot Where all default content should be placed. -->
      
      
    </div>
    <div
      class="cdr-surface-selection__loading"
    >
      
      <div
        aria-busy="true"
        aria-live="polite"
        class="cdr-skeleton"
      >
        <!-- @slot CdrSkeleton content (CdrSkeletonBone components) -->
        
        <div
          class="cdr-skeleton-bone cdr-skeleton-bone--line cdr-skeleton-bone__shimmer"
        />
        
      </div>
      
    </div>
  </div>
  
</div>
`;

exports[`CdrSurfaceSelection > shows custom loading slot 1`] = `
<div
  aria-checked="false"
  aria-disabled="false"
  class="cdr-surface cdr-surface-selection"
  data-loading="true"
  role="checkbox"
>
  
  <div
    class="cdr-surface-selection__inner"
  >
    <div
      class="cdr-layout cdr-layout--gap-three-eighth-x cdr-layout--flow-column cdr-surface-selection__layout"
      style="--cdr-layout-flow-value: auto;"
    >
      <!-- @slot Where all default content should be placed. -->
      
      
    </div>
    <div
      class="cdr-surface-selection__loading"
    >
      
      Custom loading
      
    </div>
  </div>
  
</div>
`;

exports[`CdrSurfaceSelection > shows default slot 1`] = `
<div
  aria-checked="false"
  aria-disabled="false"
  class="cdr-surface cdr-surface-selection"
  data-loading="false"
  role="checkbox"
>
  
  <div
    class="cdr-surface-selection__inner"
  >
    <div
      class="cdr-layout cdr-layout--gap-three-eighth-x cdr-layout--flow-column cdr-surface-selection__layout"
      style="--cdr-layout-flow-value: auto;"
    >
      <!-- @slot Where all default content should be placed. -->
      
      
      Default slot
      
      
    </div>
    <div
      class="cdr-surface-selection__loading"
    >
      
      <div
        aria-busy="true"
        aria-live="polite"
        class="cdr-skeleton"
      >
        <!-- @slot CdrSkeleton content (CdrSkeletonBone components) -->
        
        <div
          class="cdr-skeleton-bone cdr-skeleton-bone--line cdr-skeleton-bone__shimmer"
        />
        
      </div>
      
    </div>
  </div>
  
</div>
`;
